# apex-agi

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
apex_core/: Cargo.toml
apex_core/apex_core/src/: engine.rs  graph.rs  lib.rs  persist.rs  telemetry.rs
apex_core/apex_core/src/opt/: mod.rs  scgo.rs
apex_core/src/: lib.rs
apex_server/src/: cli.rs  main.rs  py_bindings.rs
