[package]
name = "apex_core"
version = "0.1.0"
edition = "2021"
authors = ["Apex AGI <ops@apex-agi.io>"]
license = "Apache-2.0"
description = "Apex AGI core engine, graph, and SCGO optimizer. watermark: ericadamsai"

[lib]
name = "apex_core"
path = "src/lib.rs"

[features]
default = ["postgres", "redis", "lmdb"]
postgres = []
redis = []
lmdb = []

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
petgraph = { workspace = true }
rand = { workspace = true }
statrs = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rmp-serde = { workspace = true }

# persistence optional
sqlx = { workspace = true, optional = true }
redis = { workspace = true, optional = true }
heed = { workspace = true, optional = true }

[package.metadata]
watermark = "ericadamsai"
